// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-tc-communities-AccessDenied-___style__access-denied___T1_sq"
>
  <TopcoderLogo
    height="18"
    viewBox="0 0 51 18"
    width="51"
    xmlns="http://www.w3.org/2000/svg"
  />
  <div
    className="src-shared-components-tc-communities-AccessDenied-___style__msg___33_hS"
  >
    You must be authenticated to access this page.
  </div>
  <div
    className="src-shared-components-tc-communities-AccessDenied-___style__msg___33_hS"
  >
    <a
      className="tc-btn-md tc-btn-primary"
      href="https://accounts-auth0.topcoder-dev.com/member?utm_source="
      onClick={[Function]}
    >
      Log In Here
    </a>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-tc-communities-AccessDenied-___style__access-denied___T1_sq"
>
  <TopcoderLogo
    height="18"
    viewBox="0 0 51 18"
    width="51"
    xmlns="http://www.w3.org/2000/svg"
  />
  <div
    className="src-shared-components-tc-communities-AccessDenied-___style__msg___33_hS"
  >
    You are not authorized to access this page.
  </div>
</div>
`;
